<?xml version="1.0"?>
<package>
	<name>zx120_description</name>
	<version>0.0.0</version>
	<description>The zx120_description package</description>

	<maintainer email="example@example.com">example</maintainer>

	<license>-</license>

	<url type="website"></url>
	<url type="bugtracker"></url>
	<url type="repository"></url>

	<author email="example@example.com">example</author>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>controller_manager</run_depend>
	<run_depend>effort_controllers</run_depend>
	<run_depend>gazebo_plugins</run_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>gazebo_ros_control</run_depend>
	<run_depend>joint_state_controller</run_depend>
	<run_depend>joint_state_publisher</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>rqt_gui</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>xacro</run_depend>

	<run_depend>roboticsgroup_upatras_gazebo_plugins</run_depend>

	<export>
		<gazebo_ros gazebo_media_path="${prefix}"/>
	</export>
</package>
