<?xml version="1.0"?>
<package format="2">
	<name>zx120_description</name>
	<version>0.0.0</version>
	<description>The zx120_description package</description>

	<maintainer email="example@example.com">example</maintainer>

	<license>-</license>

	<url type="website"></url>
	<url type="bugtracker"></url>
	<url type="repository"></url>

	<author email="example@example.com">example</author>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>controller_manager</exec_depend>
	<exec_depend>effort_controllers</exec_depend>
	<exec_depend>gazebo_plugins</exec_depend>
	<exec_depend>gazebo_ros</exec_depend>
	<exec_depend>gazebo_ros_control</exec_depend>
	<exec_depend>joint_state_controller</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rqt_gui</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>xacro</exec_depend>
	<depend>ros_control</depend>
	<!-- <depend>ros_controller</depend> -->
	
	<exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend>

	<export>
		<gazebo_ros gazebo_media_path="${prefix}"/>
	</export>
</package>
